force-app/main/default/objects/ResourceDefault__c/ResourceDefault__c.object-meta.xml
<CustomObject>
    <label>Resource Default</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Resource Default Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Defaults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>