force-app/main/default/objects/ResourceDefault__c/fields/EstimateId__c.field-meta.xml
<CustomField>
    <fullName>EstimateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estimate</label>
    <referenceTo>Estimate__c</referenceTo>
    <relationshipLabel>Resource Defaults</relationshipLabel>
    <relationshipName>EstimateResourceDefaults</relationshipName>
    <type>Lookup</type>
</CustomField>