force-app/main/default/objects/ResourceDefault__c/fields/EstimateTemplateId__c.field-meta.xml
<CustomField>
    <fullName>EstimateTemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Estimate Template</label>
    <referenceTo>EstimateTemplate__c</referenceTo>
    <relationshipLabel>Resource Defaults</relationshipLabel>
    <relationshipName>EstimateTemplateResourceDefaults</relationshipName>
    <type>Lookup</type>
</CustomField>