force-app/main/default/objects/ResourceDefault__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Resource Defaults</relationshipLabel>
    <relationshipName>ResourceDefaults</relationshipName>
    <type>Lookup</type>
</CustomField>