force-app/main/default/objects/ResourceDefault__c/validationRules/LookupValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>LookupValidation</fullName>
    <active>true</active>
    <description
	>Prevents associating the Resource Default record with both Estimate Template and Estimate</description>
    <errorConditionFormula
	>IF(AND(!ISBLANK( EstimateId__c ) ,!ISBLANK( EstimateTemplateId__c )) , true, false)</errorConditionFormula>
    <errorDisplayField>EstimateTemplateId__c</errorDisplayField>
    <errorMessage
	>Resource Default can not be associated with both Estimate Template and Estimate</errorMessage>
</ValidationRule>